2016-06-22  Per Bothner  <per@bothner.com>

	Generated Makefile.in and configure removed from repository.
	* autogen.sh: Script to generates those files.

	* Makefile.am: Merge the Makefiles of gnu/math, gnu/commonlisp/lang,
	gnu/xquery/lang, gnu/xquery/util, gnu/q2/lang, and kawa into
	source.list and the top-level Makefile.
	(tmp-sources1.list): Build list of source file names for '@' argument
	passed to javac, to limit command-line length.

	* Makefile.am: Pull most of logic from gnu/Makefile.am here.
	This is a step to having fewer Makefiles.
	(source-list): New separate list of files, for inclusion.

2016-06-14  Per Bothner  <per@bothner.com>

	* Makefile.am: Add domterm.jar to kawa.zip.
	* bin/kawa.sh.in: Add dmterm.jar to classpath.

	* configure.ac: Implement new --with-domterm option.
	* config.classpath: Update classpath.

2016-06-03  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.1.9.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

	* Makefile.am (kawa-snapshot.zip): New rule.

2016-05-07  Per Bothner  <per@bothner.com>

	* configure.ac: Support --with-jline3 flag in addition to jline2.
	* Makefile.am: LRelated changes.

	* configure.ac: Convert to kawa.bat.in kawa.bat using configure.
	* Makefile.am (bin/kawa.bat): Comment out rule.

2016-04-17  Per Bothner  <per@bothner.com>

	* Makefile.am: Update uninstall rules so 'make distcheck' works again.

2016-03-12  Per Bothner  <per@bothner.com>

	Enable "binary distributions" using jawa.sh and jline2.
	* Makefile.am (kawa-$(VERSION).zip): New rule.
	The jat files are now in the lib subdirectory.
	* config.classpath: New variable run_classpath does not include jline.
	* configure.ac (run_classpath): New variable.

2016-02-14  Per Bothner  <per@bothner.com>

	Add support for JLine2 as a readline alternative.
	* configure.ac" New --with-jline2 flag.
	(WITH_JLINE2_ARG. WITH_JLINE2): New argument and conditional.